1024px - 768px view spacing fixed according to the comp

--- a/public/responsive/base-wide.css
+++ b/public/responsive/base-wide.css
@@ -26,7 +26,7 @@ nav.cloud li {
 
 .bottom .tile {
   display: inline;
-  width: 500px;
+  width: 60%;
 }
 /* turn off logo on wide as we use brand-cloud-logo */
 .home .logo {
