--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -200,11 +200,20 @@ footer {
 }
 .bottom .tile  * {
   display: inline;
-  font-size:13px;
+  font-size:16px;
 }
 .bottom .tile li {
+  color: #CDCDCD;
   margin: 8px;
+  font-size: 16px;
 }
+
+.bottom .tile li span {
+  font-size: 14px;
+  color: #888;
+  margin-right: 1%;
+}
+
 .bottom .tile a,footer .tile time {
   display:block;
 }
